Fixed task button spacing

--- a/scss/common/organisms/_tableTasks.scss
+++ b/scss/common/organisms/_tableTasks.scss
@@ -49,7 +49,7 @@
     padding-right: 0;
 
     @include media-breakpoint-up(md) {
-      width: 55px;
+      width: 56px;
       padding-left: 0;
     }
   }
